--- a/React frontend/src/components/Account/WachtwoordVergeten/WachtwoordVergeten.css
+++ b/React frontend/src/components/Account/WachtwoordVergeten/WachtwoordVergeten.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 
-.WachtwoordVergetenwrapper{
+.WachtwoordVergetenWrapper{
   margin-top: 12%;
   width: 380px;
   height: 60%;
@@ -19,7 +19,7 @@
   border-radius: 18px;
   box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
 }
-.WachtwoordVergetenwrapper .WachtwoordVergetentitle{
+.WachtwoordVergetenWrapper .WachtwoordVergetenTitle{
   font-size: 28px;
   font-weight: 600;
   text-align: center;
@@ -29,17 +29,17 @@
   border-radius: 15px 15px 0 0;
   background: linear-gradient(-135deg, #5e5e5e, #ad0000);
 }
-.WachtwoordVergetenwrapper form{
+.WachtwoordVergetenWrapper form{
   padding: 10px 30px 50px 30px;
 }
-.WachtwoordVergetenwrapper form .WachtwoordVergetenfield{
+.WachtwoordVergetenWrapper form .WachtwoordVergetenField{
   height: 50px;
   width: 100%;
   margin-top: 40px;
   margin-bottom: 30px;
   position: relative;
 }
-.WachtwoordVergetenwrapper form .WachtwoordVergetenfield input{
+.WachtwoordVergetenWrapper form .WachtwoordVergetenField input{
   height: 100%;
   width: 100%;
   outline: none;
@@ -49,11 +49,11 @@
   border-radius: 25px;
   transition: all 0.3s ease;
 }
-.WachtwoordVergetenwrapper form .WachtwoordVergetenfield input:focus,
-form .WachtwoordVergetenfield input:valid{
+.WachtwoordVergetenWrapper form .WachtwoordVergetenField input:focus,
+form .WachtwoordVergetenField input:valid{
   border-color: #e6b800;
 }
-.WachtwoordVergetenwrapper form .WachtwoordVergetenfield label{
+.WachtwoordVergetenWrapper form .WachtwoordVergetenField label{
   position: absolute;
   top: 50%;
   left: 20px;
@@ -64,8 +64,8 @@ form .WachtwoordVergetenfield input:valid{
   transform: translateY(-50%);
   transition: all 0.3s ease;
 }
-form .WachtwoordVergetenfield input:focus ~ label,
-form .WachtwoordVergetenfield input:valid ~ label{
+form .WachtwoordVergetenField input:focus ~ label,
+form .WachtwoordVergetenField input:valid ~ label{
   top: 0%;
   font-size: 16px;
   color: #e6b800;
@@ -73,7 +73,7 @@ form .WachtwoordVergetenfield input:valid ~ label{
   transform: translateY(-50%);
 }
 
-form .WachtwoordVergetenfield input[type="submit"]{
+form .WachtwoordVergetenField input[type="submit"]{
   color: #fff;
   border: none;
   padding-left: 0;
@@ -84,10 +84,10 @@ form .WachtwoordVergetenfield input[type="submit"]{
   background: linear-gradient(-135deg, #5e5e5e, #ad0000);
   transition: all 0.3s ease;
 }
-form .WachtwoordVergetenfield input[type="submit"]:active{
+form .WachtwoordVergetenField input[type="submit"]:active{
   transform: scale(0.95);
 }
-form .WachtwoordVergetenfield input[type="submit"]:hover{
+form .WachtwoordVergetenField input[type="submit"]:hover{
   transform: scale(0.95);
   background: linear-gradient(-135deg, #ffffff, #e6b800);;
 }
